fix: fixed dropdown z-index

--- a/src/shared/core/dropdown-new/dropdown-component.module.scss
+++ b/src/shared/core/dropdown-new/dropdown-component.module.scss
@@ -2,6 +2,8 @@
   border-radius: 2px;
   box-sizing: border-box;
   position: relative;
+  display: inline-block;
+  z-index: 1;
   &--open {
     box-shadow: 0 0 8px 0px rgba(0, 0, 0, 0.18);
   }
@@ -53,9 +55,8 @@
   padding-left: 10px;
   padding-right: 20px;
   transition: opacity 200ms;
-  z-index: 9999 !important;
   opacity: 0;
-  &--open{
+  &--open {
     opacity: 1;
   }
 }
